Fixed links; added .htaccess to remove .html from URLs; added readme

--- a/console.html
+++ b/console.html
@@ -24,7 +24,7 @@
         <h1 id="console">RELEASE IN:</h1>
 		<div id="countdown_c"></div>
 		<p id="note_c"></p>
-        <p id="title" class="links bottom"><a href="index.html"><b>COUNTDOWN</b> TO STEAM RELEASE</a></p>
+        <p id="title" class="links bottom"><a href="index"><b>COUNTDOWN</b> TO STEAM RELEASE</a></p>
         <footer>
             <div class="container">
                 <a class="credits" href="http://www.konami.jp/mgs5/tpp/en/index.php5" target="_blank">&copy; KONAMI, 2015, All rights reserved</a>
