--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="countdown"></div>
 		<p id="note"></p>
         <p class="links"><a href="http://store.steampowered.com/app/287700/" target="_blank"><b>STEAM</b> STORE PAGE</a></p>
-        <p id="console" class="links bottom"><a href="console.html"><b>COUNTDOWN</b> TO CONSOLE RELEASE</a></p>
+        <p id="console" class="links bottom"><a href="console"><b>COUNTDOWN</b> TO CONSOLE RELEASE</a></p>
         <footer>
             <div class="container">
                 <a class="credits" href="http://www.konami.jp/mgs5/tpp/en/index.php5" target="_blank">&copy; KONAMI, 2015, All rights reserved</a>
