Fixed og:properties for FB image

--- a/console.html
+++ b/console.html
@@ -7,7 +7,7 @@
         <meta name="description" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown">
         <meta property="og:title" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown" />
         <meta property="og:type" content="website" />
-        <meta property="og:image:url" content="assets/img/fb_thumb.png" />
+        <meta property="og:image:url" content="http://104.155.25.37/assets/img/fb_thumb.png" />
         <meta property="og:image" content="assets/img/fb_thumb.png" />
         <meta property="og:url" content="http://mgs5.hintclub.co/console" />
         <meta property="og:description" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown" />
