--- a/console.html
+++ b/console.html
@@ -20,11 +20,33 @@
         <title>METAL GEAR SOLID V: THE PHANTOM PAIN release countdown</title>
     </head>
     <body>
-        <img class="logo" src="assets/img/logo.png" alt="MGS V: The Phantom Pain Logo" />
+
+    <!--Facebook Javascript SDK begin-->
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=424025034405022";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+    <!--Facebook Javascript SDK end-->
+
+        <img src="assets/img/logo.png" alt="MGS V: The Phantom Pain Logo" />
         <h1 id="console">RELEASE IN:</h1>
 		<div id="countdown_c"></div>
 		<p id="note_c"></p>
-        <p id="title" class="links bottom"><a href="index"><b>COUNTDOWN</b> TO STEAM RELEASE</a></p>
+
+    <!-- SOCIAL BUTTONS begin -->
+        <div class="social">
+            <a href="https://twitter.com/share" class="twitter-share-button" data-text="WE'RE ALMOST THERE #MGS5 #TPP #HYPE">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+        </div>
+        <div class="fb-like social" data-href="http://mgs5.hintclub.co/console" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+    <!-- SOCIAL BUTTONS end -->
+
+        <p id="title" class="links top bottom"><a href="index"><b>COUNTDOWN</b> TO STEAM RELEASE</a></p>
         <footer>
             <div class="container">
                 <a class="credits" href="http://www.konami.jp/mgs5/tpp/en/index.php5" target="_blank">&copy; KONAMI, 2015, All rights reserved</a>
@@ -32,6 +54,7 @@
             </div>
         </footer>
 
+    <!-- GOOGLE ANALYTICS begin -->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,6 +65,7 @@
           ga('send', 'pageview');
 
         </script>
+    <!-- GOOGLE ANALYTICS end -->
 
 		<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		<script src="assets/countdown/jquery.countdown.js"></script>
