--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- SOCIAL BUTTONS begin -->
         <div class="social">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-text="WE'RE ALMOST THERE #MGS5 #TPP #HYPE">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-text="WE'RE ALMOST THERE #MGSV #TPP #HYPE">Tweet</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
         </div>
