Inverted console and Steam pages; changed Tweet message; css fixes

--- a/steam.html
+++ b/steam.html
@@ -4,20 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown">
-        <meta property="og:title" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown" />
+        <meta name="description" content="METAL GEAR SOLID V: THE PHANTOM PAIN Steam release countdown">
+        <meta property="og:title" content="METAL GEAR SOLID V: THE PHANTOM PAIN Steam release countdown" />
         <meta property="og:type" content="website" />
         <meta property="og:image:url" content="http://104.155.25.37/assets/img/fb_thumb.png" />
         <meta property="og:image" content="assets/img/fb_thumb.png" />
-        <meta property="og:url" content="http://mgs5.hintclub.co/console" />
-        <meta property="og:description" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown" />
-        <meta property="og:site_name" content="METAL GEAR SOLID V: THE PHANTOM PAIN release countdown" />
+        <meta property="og:url" content="http://mgs5.hintclub.co" />
+        <meta property="og:description" content="METAL GEAR SOLID V: THE PHANTOM PAIN Steam release countdown" />
+        <meta property="og:site_name" content="METAL GEAR SOLID V: THE PHANTOM PAIN Steam release countdown" />
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/countdown/jquery.countdown.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
         <link rel="icon" href="assets/img/favicon.png">
         <link rel="shortcut icon" href="assets/img/favicon.png">
-        <title>METAL GEAR SOLID V: THE PHANTOM PAIN release countdown</title>
+        <title>METAL GEAR SOLID V: THE PHANTOM PAIN Steam release countdown</title>
     </head>
     <body>
 
@@ -33,20 +33,21 @@
     <!--Facebook Javascript SDK end-->
 
         <img src="assets/img/logo.png" alt="MGS V: The Phantom Pain Logo" />
-        <h1 id="console">RELEASE IN:</h1>
-		<div id="countdown_c"></div>
-		<p id="note_c"></p>
+        <h1 id="title">STEAM RELEASE IN:</h1>
+		<div id="countdown"></div>
+		<p id="note"></p>
 
     <!-- SOCIAL BUTTONS begin -->
         <div class="social">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-text="WE'RE ALMOST THERE #MGSV #TPP #HYPE">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-text="LET'S GET THE HYPE GOING #COUNTDOWN #MGSV #TPP #HYPE">Tweet</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
         </div>
-        <div class="fb-like social" data-href="http://mgs5.hintclub.co/console" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+        <div class="fb-like social" data-href="http://mgs5.hintclub.co/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
     <!-- SOCIAL BUTTONS end -->
 
-        <p id="title" class="links top bottom"><a href="index"><b>COUNTDOWN</b> TO STEAM RELEASE</a></p>
+        <p class="links top"><a href="http://store.steampowered.com/app/287700/" target="_blank"><b>STEAM</b> STORE PAGE</a></p>
+        <p id="console" class="links bottom"><a href="index"><b>COUNTDOWN</b> TO CONSOLE RELEASE</a></p>
         <footer>
             <div class="container">
                 <a class="credits" href="http://www.konami.jp/mgs5/tpp/en/index.php5" target="_blank">&copy; KONAMI, 2015, All rights reserved</a>
